--- a/index.html
+++ b/index.html
@@ -88,8 +88,6 @@
                                                 <br />
 
                                 </td>
-
-
                             <tr>
 
                                 <td align="center"
@@ -142,14 +140,12 @@
                             <table width="100%" border="0" cellspacing="0" cellpadding="0" style="margin-left:50px">
                                 <tbody>
                                     <tr>
-
-
                                         <td width="50%" align="left"
                                             style="font-family: Arial, Helvetica, sans-serif; font-size: 24px; line-height: 32px; text-align: left; font-weight: 400; color: #ffffff;">
                                             <a href="mchaturvedi@rtu.ac.in" style="color: #ffffff;text-decoration: none;">
                                                 Dr Manish Chaturvedi<br />
                                                 Chairman,Placement Cell,<br />
-                                                Mob No:<br />
+                                                Mob No:9414489208<br />
                                                 Email : mchaturvedi@rtu.ac.in
                                                         placements@rtu.ac.in
                                             </a></td>
@@ -174,9 +170,9 @@
                                         <td width="50%" align="right"
                                             style="font-family: Arial, Helvetica, sans-serif; font-size: 24px; line-height: 32px; text-align: left; font-weight: 400; color: #ffffff;">
                                             <a  style="color: #ffffff;">
-                                                Pranjal Ambesh<br />
+                                                Divisha Tahiliani<br />
                                                 Placement Team Member,<br />RTU Kota<br />
-                                                Mob No:+91-6375145299
+                                                Mob No:+91-8112209847
                                             </a></td>
                                     </tr>
                                 </tbody>
@@ -228,9 +224,6 @@
     </tr>
     </tbody>
     </table>
-
-
-
 </body>
 
 </html>
