--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                                    <h3> Thanks for the excellent Placement Session 2022</h3><br></td>
                                             </tr>
                                             <tr>
-                                                <td><a target="_blank"><img src="./m.jpeg"
+                                                <td><a target="_blank"><img src="./ta.png"
                                 
                                                             style="display:block;width: 900px;height: 600px;"></a></td>
                                             </tr>
@@ -91,7 +91,7 @@
 
                                 <td align="center"
                                     style="font-size: 18px; line-height:26px; font-weight: 400; color: #1C1919; font-family: 'Times New Roman', Times, serif">
-                                    <h3> Feb 2023 To June 2023 For 6 months.<br />
+                                    <h3> Feb 2023 To July 2023 For 6 months.<br />
                                         Internship must be paid.
                                         <br />
                                         Offline and Online both acceptable<br />
