--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                                                 <td align="center"
                                                     style="font-size: 16px; line-height:26px; font-weight: 200; color: #1C1919; font-family: 'Times New Roman', Times, serif">
                                                     <h3>
-                                                        We feel proud to invite your company for campus visit(can be
-                                                        vitural) to offer full time opportunities.<br />We also request
+                                                        We feel proud to invite your company for campus visit (can be
+                                                        virtual) to offer full time opportunities.<br />We also request
                                                         you to provide one semester internship to our final year 2023
                                                         batch students.</h3><br />
                                                     <td />
