--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                                             <tr>
                                                 <td height="20"></td>
                                             </tr>
-                                            <tr>
+                                            <tr style="background-color:black;">
                                                 <td align="center"
-                                                    style="font-size: 26px; line-height:32px; font-weight: 700; color: #000000; font-family: 'Times New Roman', Times, serif;">
-                                                    Invitation-Campus 2023 and Internship @<a target="_blank"
+                                                    style="font-size: 22px; line-height:32px; font-weight: 700; color: white; font-family: 'Times New Roman', Times, serif">
+                                                    Invitation-Campus Recruitment 2023 and Internship @<a target="_blank"
                                                         href="https://www.rtu.ac.in">RTU Kota</a></td>
                                             </tr>
 
@@ -95,14 +95,16 @@
 
                             <tr>
                                 <td align="center" style="font-size:16px;font-weight:300;color:#1C1919">
-                                    <h2>Click on register button to accept our proposal or You can also contact us at
+                                    <h2>Kindly revert to this proposal to accept our invitation or You can also contact us at
                                         below mentioned details.</h2>
                                 </td>
                             </tr>
                             <tr>
-                                <td align="center"><a href="" target="_blank"><img
+                            <td align="center"><!--<a href="" target="_blank"><img
                                             src="https://res.cloudinary.com/dxkcs58w0/image/upload/v1663267907/bt_bddjq0.png"
-                                            alt="register"></a></td>
+                                            alt="register"></a> -->
+                                        
+                                        <button style="background-color:#5a5481;border:none;width:40%;height:30px"><span style="font-size:15px;font-weight:300;font-style:bold;">Expecting positive response from your side</span></button></td>
                             </tr>
                             <tr>
                                 <td height="20"></td>
@@ -138,7 +140,7 @@
                                 <tbody>
                                     <tr>
                                         <td width="50%" align="left"
-                                            style="font-family: Arial, Helvetica, sans-serif; font-size: 24px; line-height: 32px; text-align: left; font-weight: 400; color: #ffffff;margin-top: 0px;">
+                                            style="font-family: Arial, Helvetica, sans-serif; font-size: 20px; line-height: 32px; text-align: left; font-weight: 400; color: #ffffff;margin-top: 0px;">
                                             <a href="mchaturvedi@rtu.ac.in"
                                                 style="color: #ffffff;text-decoration: none;">
                                                 Dr Manish Chaturvedi<br />
