--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                                             <tr style="background-color:black;">
                                                 <td align="center"
                                                     style="font-size: 22px; line-height:32px; font-weight: 700; color: white; font-family: 'Times New Roman', Times, serif">
-                                                    Invitation-Campus Recruitment 2023 and Internship @<a target="_blank"
+                                                    Invitation-Campus Recruitment 2023 and Internship @<a target="_blank" style="color:#50C878;"
                                                         href="https://www.rtu.ac.in">RTU Kota</a></td>
                                             </tr>
 
@@ -104,7 +104,7 @@
                                             src="https://res.cloudinary.com/dxkcs58w0/image/upload/v1663267907/bt_bddjq0.png"
                                             alt="register"></a> -->
                                         
-                                        <button style="background-color:#5a5481;border:none;width:40%;height:30px"><span style="font-size:15px;font-weight:300;font-style:bold;">Expecting positive response from your side</span></button></td>
+                                        <button style="background-color:#5a5481;border:none;width:40%;height:30px"><span style="font-size:15px;font: weight 3px;;font-style:bold;color:white">Expecting positive response from your side</span></button></td>
                             </tr>
                             <tr>
                                 <td height="20"></td>
